{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 181,
  "lineage": "76896dbe-60f0-e1c4-1014-f390137c3759",
  "resources": [
    {
      "module": "module.carts_app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "carts_app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06f2f779464715dc5",
            "arn": "arn:aws:ec2:us-west-2:319978541095:instance/i-0be9d718ce0f73c99",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0be9d718ce0f73c99",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "EC2_Linux_CI_Server",
            "monitoring": false,
            "primary_network_interface_id": "eni-0f748993112fc1853",
            "private_dns": "ip-172-31-61-4.us-west-2.compute.internal",
            "private_ip": "172.31.61.4",
            "public_dns": "ec2-34-219-244-206.us-west-2.compute.amazonaws.com",
            "public_ip": "34.219.244.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0bbb50ada045098a1",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "carts_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-214a766a",
            "tags": {
              "Name": "carts"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b95cdbf28109ae94"
            ]
          }
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_instance",
      "name": "database",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06f2f779464715dc5",
            "arn": "arn:aws:ec2:us-west-2:319978541095:instance/i-03984a0f799e4dbfe",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-03984a0f799e4dbfe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "EC2_Linux_CI_Server",
            "monitoring": false,
            "primary_network_interface_id": "eni-09a5d0964944dba56",
            "private_dns": "ip-172-31-57-241.us-west-2.compute.internal",
            "private_ip": "172.31.57.241",
            "public_dns": "ec2-52-33-77-232.us-west-2.compute.amazonaws.com",
            "public_ip": "52.33.77.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02a8da6d2d4bb4a03",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "database_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-214a766a",
            "tags": {
              "Name": "database"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-033796cfc11ba8b64"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "carts_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:319978541095:security-group/sg-0b95cdbf28109ae94",
            "description": "Allow 22_8081 port inbound traffic",
            "egress": [],
            "id": "sg-0b95cdbf28109ae94",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "carts_sg",
            "name_prefix": null,
            "owner_id": "319978541095",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all_to_carts"
            },
            "timeouts": null,
            "vpc_id": "vpc-38169040"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:319978541095:security-group/sg-033796cfc11ba8b64",
            "description": "Allow 22_27017 port inbound traffic",
            "egress": [],
            "id": "sg-033796cfc11ba8b64",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "database_sg",
            "name_prefix": null,
            "owner_id": "319978541095",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_local_to_database"
            },
            "timeouts": null,
            "vpc_id": "vpc-38169040"
          }
        }
      ]
    }
  ]
}